# mechanics-simulation-project

./: pyproject.toml
mechanics_simulations/: __init__.py
mechanics_simulations/core/: animation_base.py  integrators.py  simulations_base.py
mechanics_simulations/double_pendulum/: double_pendulum_animations.py  double_pendulum_simulations.py  pendulum_objects.py
mechanics_simulations/n_body_problem/: gravity_animations.py  gravity_object.py  gravity_simulations.py
mechanics_simulations/tests/core_test/: test_simulation_base
mechanics_simulations/tests/gravitations_test/: test_gravity_simulations.py
mechanics_simulations/three_body_problem/: gravitational_object.py  gravity_animations.py  gravity_simulations.py
mechanics_simulations/utils/: math_helpers.py
scripts/: run_double_pendulum_sims.py  run_gravitation_sims.py
